--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<p>Dieser Text wird im Browserfenster angezeigt.</p>
+<h1>CoderDojo &Uuml;bung</h1>
 </body>
-
+<p>Lorem ipsum dolor sit amet ...</p>
 </html>
