--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
 <h1>CoderDojo &Uuml;bung</h1>
 </body>
-<p>Lorem ipsum dolor sit amet ...</p>
+<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+<h2>Einleitung</h2>
+<p>Hallo 5A</p>
+<h3>Haupteil</h3>
+<p>Wir haben Informatikunterricht bis 15:50 Uhr</p>
 </html>
