--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+<link href="index.css" rel="stylesheet">
 <title>Beschreibung der Seite (erscheint in der Titelzeile des Browsers)</title>
 </head>
 
