--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html>
 
 <head>
-<title>Beschreibung der Seite (erscheint in der Titelzeile des Browsers)</title>
+<title>Coderdojo Übungen</title>
 <link href="index.css" rel="stylesheet">
 </head>
 
 <body>
 <h1>CoderDojo &Uuml;bung</h1>
-</body>
-<p>Dies ist ein Typoblindtext. An ihm kann man sehen, ob alle Buchstaben da sind und wie sie aussehen. Manchmal benutzt man Worte wie Hamburgefonts, Rafgenduks oder Handgloves, um Schriften zu testen.</p>
-<div class="sidebar">
+<p class='intro'>Dies ist ein Typoblindtext. An ihm kann man sehen, ob alle Buchstaben da sind und wie sie aussehen. Manchmal benutzt man Worte wie Hamburgefonts, Rafgenduks oder Handgloves, um Schriften zu testen.</p>
+<div class="sidebar1">
     Mehr zu dem Thema gibt es auf meiner Webseite. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 </div>
 <h2>Einleitung</h2>
-<p id='intro'>Lorem ipsum <a href="http://www.google.at">dolor sit amet</a>, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p></p>
-
+<p id='intro'>Lorem ipsum <a href="http://www.loremipsum.de/">dolor sit amet</a>, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p></p>
+<div class="sidebar2">
+    <img src= "Grafik.png">
+</div>
 <h3>Hauptteil</h3>
 <p>Manchmal Sätze, die alle Buchstaben des Alphabets enthalten - man nennt diese Sätze »Pangrams«. Sehr bekannt ist dieser: The quick brown fox jumps over the lazy old dog. Oft werden in Typoblindtexte auch fremdsprachige Satzteile eingebaut (AVAIL® and Wefox™ are testing aussi la Kerning), um die Wirkung in anderen Sprachen zu testen. In Lateinisch sieht zum Beispiel fast jede Schrift gut aus. Quod erat demonstrandum. Seit 1975 fehlen in</p>
+</body>
 </html>
